--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -197,30 +197,26 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     border: 1px solid #d4d4d4;
     /*set the size of the lens:*/
     width: 20vw;
-    height: 250px;
+    aspect-ratio: 1 / 1;
     z-index: 100;
 }
 
 .img-zoom-result {
     border: 1px solid #d4d4d4;
-    width: 40vw;
-    height: 500px;
+    width: 35vw;
     position: fixed;
-    /* bottom: 200px; */
     top: 0;
     padding-left: 15px;
     z-index: 100;
     background-color: white;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
+    aspect-ratio: 1 / 1;
+    left: 50px;
 }
 
 .img-zoom-container img {
     max-height: 70vh;
 }
-
-/*#custom_container_1 {
-    width: 1200px !important;
-}*/
 
 .images-modal-container {
     position: fixed;
