--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -253,6 +253,19 @@ input[type="radio"]+label:before, input[type="checkbox"]+label:before {
     object-fit: unset;
 }
 
+.piantina-sold {
+    -webkit-filter: grayscale(0.7);
+    filter: grayscale(0.7);
+}
+.sold {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    height: auto;
+}
+
 @media screen and (min-width: 1345px) {
     #img_punti {
         height: 100vh;
